# agora

./: .gitignore  AGENTS.md  README.md  explore_mcp.py  pyproject.toml
admin/: cli.py  requirements.txt
agora/: __main__.py  config.py
agora/backbone/: AGENTS.md  __init__.py  database.py  eventbus.py  loader.py  middleware.py  registry.py  router.py  server.py
agora/plugins/chat/: AGENTS.md  README.md  __init__.py  migrations.py
reference/: 001-backbone-scaffold.md  002-chat-plugin.md  002.5-mcp-usability.md  003-board-plugin.md  004-lock-signal-plugin.md  005-log-plugin.md  006-memory-plugin.md  007-mcp-usability.md  ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  META.md
tests/: conftest.py
tests/admin/: test_cli.py
tests/test_backbone/: test_agent_usability.py  test_backbone_handlers.py  test_database.py  test_descriptions.py  test_error_format.py  test_eventbus.py  test_integration.py  test_loader.py  test_mcp_schema.py  test_middleware.py  test_middleware_auth.py  test_plugin_base.py  test_registry.py  test_router.py  test_server.py  test_typed_wrapper.py
tests/test_plugins/: test_chat.py  test_chat_handlers.py  test_chat_integration.py
